assets/style2.css
html {
    display: block;
}
body {
    font:15px 'Playfair Display', serif;
    color:#000000;
background-image: url("try.png");
background-size:  cover;
    display: inline;
    min-height:100vh;
    max-width: 100%;
}

main{
    display:block
}

a{
    color: #8E65AC;
    font-size: 15px;
    text-decoration: underline;
}
a:visited{
    color:#8E65AC;

}
a:hover{
    color:#8E65AC;
    text-decoration: underline;
    font-weight: bold;

}
time {
  color: #000000;
  font: 15px 'Playfair Display', serif;
      font-weight: normal;
}

p {

  font: 15px 'Playfair Display', serif;
    font-weight: normal;
    color: #000000;
  margin-top: 0px;
    max-width: 900px;
}


h1 {
  font: 18px 'Playfair Display', serif;
  font-weight: 500;
  color: #000000;
    letter-spacing:0px;
    line-height:5;
}

h2 {
  font: bold 18px 'Playfair Display', serif;
  color: #000000;
    letter-spacing:0px;
    line-height:1;
}


li {
  font: 15px 'Playfair Display', serif;
  color: #000000;
  line-height: 2;
    }


.site-sidebar{
  overflow: hidden;


/*  background-image:
    radial-gradient(#D3D3D3 20%, transparent 0), 
    radial-gradient(#D3D3D3 20%, transparent 0);
  background-size: 5px 5px;
  background-position: 0 0 15px 15px;*/
  border-top: 0px #000000 solid;
  border-bottom: 0px #000000 solid;
  position: fixed;
width: 100%;
height: 100%;
top: 20%;
            vertical-align: center;
            text-align: center;


}


a.title, a.title:visited {
    color: #000000;
    font: 53px 'Cinzel Decorative', serif;
    text-align: left;
    text-decoration: none;
    word-spacing: normal;
    position:  fixed;

    margin-top: 0%;

}

.nav-link, .nav-link:visited {
    font: 18px 'Cinzel Decorative', serif;
    color: #000000;
    line-height: 0;
    text-decoration: none;
    position: relative;
    left:  0%;
top:  70px;


}
.nav-link:hover
{
    color: #8E65AC;
    text-decoration: underline;
}
.site-nav, .nav-link, .nav-link:hover, .nav-link:visited {
    word-spacing: 2.5em;
}

.page-link, .page-link:visited{
    font-size: 15px;
    color: #8E65AC;
    line-height: 0;
    margin: 0px;
    text-decoration: none;
    }

.page-link:hover{
    color: #8E65AC;
}

 .page-content {
    font:15px 'Playfair Display', serif;
    font-weight: normal;
    background-color: transparent;
  position: fixed;
width: 70%;
height: 100%;
top: 35%;
left: 20%;
overflow-x: hidden;
                overflow-y: auto;
                text-align:left;

    }

.post-list-heading{
    font-size:18px
}
.post-list{
    margin-left:0;
    list-style:none;
}

.post-meta {
    font: 15px 'Playfair Display', serif;
    font-weight: normal;
    color: #000000;
    font-weight: normal;
    }
.post-link{
    display:block;
    font-size: 15px;
    font-weight: normal;
    color:#8E65AC;
}
.post-header{
    margin-bottom:30px
}
.post-title{
    font-size:18px;
    letter-spacing:0px;
    line-height:1;
}

.post-content h2{
    font-size:18px;
}

.post-content h3{
    font-size:18px;
}

.post-content h4{
    font-size:18px;
}
.post-list {
  padding: 0px 0px 0px 0px;

}
.post-title {
  font: bold 18px 'Playfair Display', serif;
  letter-spacing: 0px;
  line-height: 1;

}
.post-header{
  margin-top: 0px;
  margin-bottom: 0px;
}

@media screen and (max-width: 700px){
    .site-nav, .nav-link, .nav-link:hover, .nav-link:visited {
         word-spacing: 1em;
     }
}

@media screen and (max-width: 700px){
    .site-nav, .nav-link, .nav-link:hover, .nav-link:visited {
         word-spacing: .75em;
     }
}

@media screen and (max-width: 700px){
        .site-sidebar  {
            left:  0%;
            margin-top: 4%;
/*            margin-left:  40px;
*/            border-right: 0px #000000 solid;
            border-left: 0px #000000 solid;
            border-top: 0px;
            border-bottom: 0px;
              position: fixed;
            width: 100%;
            height: 100%;
            top: 20%;
            vertical-align: center;
            text-align: center;
/*            position: fixed;
            z-index: 1;
            top: 0;
            left: 0;
            overflow-x: hidden;*/
                }

        ul, a.title, .nav-link, .nav-link:visited {
            font: 18px 'Cinzel Decorative', serif;
            color: #000000;
            line-height: 0;
        /*    margin-left: 18%;*/
            text-decoration: none;
            }

        a.title {
            font: 30px 'Cinzel Decorative', serif;
            margin-left: 12%;
        }
        .nav-link:hover{
            color:#8E65AC;
        }
            img {
                height: 50%;
                width: 50%;
            }
         h1, h1:visited {
           color: #000000;
           font: 18px 'Playfair Display', serif;
           font-weight: 500;
        }
        a, a:visited{
    font-size: 15px;
    color: #8E65AC;
    line-height: 0;
    margin: 0px;
    text-decoration: none;


    }
           .page-content {
            font: 15px 'Playfair Display', serif;
            font-weight: normal;
            background-color: transparent;
/*            width:  60%;
            height:  0px;
            top: 5%;
            left:  10%;
            margin-top: 0px;
            margin-left: 0%;*/
                background-color: transparent;
  position: fixed;
/*width: 100%;
height: 200px;
top: 40%;
left: 40%;*/
     vertical-align: center;
     margin-left:  -5%;
     margin-top:  5%;
/*margin-top: -100px; /* Negative half of height.
/*//**margin-left: -250px*/; */*//* Negative half of width. */

    } 
    p
    {
        font-size: 15px;
    }

}

